Add section files

--- a/main.tex
+++ b/main.tex
@@ -8,7 +8,7 @@
 
 \title{Note of ROS Tutorial}
 \author{Lectures by Dr. Pilwon Hur}
-%\date{June 12, 2015\footnote{Recorded by Kenneth Chao}}
+\date{August 17-18, 2016}
 
 \usepackage{natbib}
 \usepackage{graphicx}
@@ -21,14 +21,34 @@
 
 \maketitle
 \section{Introduction to ROS}
-\subsection{What is ROS?}
-\subsection{Recommended tools in Ubuntu}
-\subsection{ROS installation and related configruation setup}
-\subsection{Turtlesim}
+\input{sections/WhatIsROS.tex}
+%Ken
+%______________Brief intro, and also recommended version
+
+
+\input{sections/Tools.tex}
+%Yi-tsen
+%______________Terminator, Sublime, and other packages added later
+
+\input{sections/Install.tex}
+
+%Imporant: bash file and added ROS alias("cm,cw,cs...etc")
+%Imporant: ROS-rqt-graph for work flow
+
+
 \section{Details of Programming in ROS}
-\subsection{ROS system structure overview}
-\subsection{First program with ROS: Hello World!}
+\input{sections/Overview.tex}
+
+%Imporant: structures and units
+%Imporant: structures and units
+
+\input{sections/FirstProgram.tex}
+
+%Imporant: create a package and make, cmakne catin make
+
 \subsection{Program demonstration with Kinect}
+
+%Maybe just video link and brief discription for viz and rqt_graph
 
 
 
