Task Allocation Updated

--- a/main.tex
+++ b/main.tex
@@ -29,25 +29,23 @@ Let's create a catkin workspace:
 	 \$\quad catkin\_init\_workspace}	 
 \end{shaded}
 \input{sections/WhatIsROS.tex}
-
-
 %Ken
 %______________Brief intro, and also recommended version
 
 
 \input{sections/Tools.tex}
-%Yi-tsen
+%Christian
 %______________Terminator, Sublime, and other packages added later
 
 \input{sections/Install.tex}
-
+%Namita
 %Imporant: bash file and added ROS alias("cm,cw,cs...etc")
 %Imporant: ROS-rqt-graph for work flow
 
 
 \section{Details of Programming in ROS}
 \input{sections/Overview.tex}
-
+%Yi-tsen
 %Imporant: structures and units
 %Imporant: structures and units
 
@@ -56,7 +54,7 @@ Let's create a catkin workspace:
 %Imporant: create a package and make, cmakne catin make
 
 \subsection{Program demonstration with Kinect}
-
+%Skipped
 %Maybe just video link and brief discription for viz and rqt_graph
 
 
