--- a/main.tex
+++ b/main.tex
@@ -5,6 +5,7 @@
 \usepackage{graphicx}
 \usepackage{mathrsfs}
 \usepackage{hyperref}
+\usepackage{booktabs}
 
 \title{Note of ROS Tutorial}
 \author{Lectures by Dr. Pilwon Hur}
@@ -13,21 +14,19 @@
 \usepackage{natbib}
 \usepackage{graphicx}
 \usepackage{amsthm}
- \usepackage{framed,color}
+\usepackage{framed,color}
 \definecolor{shadecolor}{rgb}{0.9,0.9,0.9}
 \newtheorem{prop}{Proposition}
 \usepackage{courier}
+
+\usepackage{csquotes}
+
+
+
 \begin{document}
 
 \maketitle
 \section{Introduction to ROS}
-Let's create a catkin workspace:
-\begin{shaded}
-\noindent\texttt{\noindent
-	\$\quad mkdir -p ~/catkin\_ws/src \quad \% create a directory\\
-	 \$\quad cd ~/catkin\_ws/src\\
-	 \$\quad catkin\_init\_workspace}	 
-\end{shaded}
 \input{sections/WhatIsROS.tex}
 %Ken
 %______________Brief intro, and also recommended version
@@ -50,7 +49,13 @@ Let's create a catkin workspace:
 %Imporant: structures and units
 
 \input{sections/FirstProgram.tex}
-
+Let's create a catkin workspace:
+\begin{shaded}
+\noindent\texttt{\noindent
+	\$\quad mkdir -p ~/catkin\_ws/src \quad \% create a directory\\
+	 \$\quad cd ~/catkin\_ws/src\\
+	 \$\quad catkin\_init\_workspace}	 
+\end{shaded}
 %Imporant: create a package and make, cmakne catin make
 
 \subsection{Program demonstration with Kinect}
