main file rename

--- a/main_Ros.tex
+++ b/main_Ros.tex
@@ -63,6 +63,13 @@ Let's create a catkin workspace:
 %Maybe just video link and brief discription for viz and rqt_graph
 
 
+\section*{Contributor List}
+\begin{itemize}
+
+  \item Author, F., \textit {Some University}
+  \item Author, S., \textit {Some University}
+  \item Author, T., \textit {Another University}
+\end{itemize}
 
 
 \bibliographystyle{plain}
